--- a/src/app/components/dashboard/content/analytics/general-analytics/general-analytics.component.css
+++ b/src/app/components/dashboard/content/analytics/general-analytics/general-analytics.component.css
@@ -4,16 +4,17 @@
 }
 
 .info-side h5 {
-    margin: 4px 0px;
-    margin-top: 16px;
-    color: #555;
+    color: #888;
+    font-size: 11px;
+    margin: 0px;
 }
 
 .info-side span {
-    font-weight: bold;
     color: #212121;
     display: block;
-    font-size: 12px;
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 16px;
 }
 
 .canvas-side {
