--- a/src/app/components/dashboard/content/general/general-disease-report/general-disease-report.component.html
+++ b/src/app/components/dashboard/content/general/general-disease-report/general-disease-report.component.html
@@ -1,6 +1,6 @@
 <div class="main-container primary-radius">
     <h5>Rapport des maladies</h5>
     <div class="canvas-container">
-        <canvas baseChart [legend]="false" height="240" [datasets]="radarChartData" [options]="radarChartOptions" [labels]="radarChartLabels" [chartType]="radarChartType"></canvas>
+        <canvas baseChart [legend]="false" height="220px" [datasets]="radarChartData" [options]="radarChartOptions" [labels]="radarChartLabels" [chartType]="radarChartType"></canvas>
     </div>
 </div>
