--- a/src/app/components/dashboard/content/medical-files-manager/medical-files-manager.component.css
+++ b/src/app/components/dashboard/content/medical-files-manager/medical-files-manager.component.css
@@ -2,6 +2,7 @@
     max-height: 480px;
     min-height: 480px;
     margin-top: 16px;
+    margin-bottom: 16px;
     overflow-y: auto;
     overflow-x: hidden;
 }
