Location Analytics done

--- a/src/app/components/dashboard/content/analytics/analytics.component.html
+++ b/src/app/components/dashboard/content/analytics/analytics.component.html
@@ -27,6 +27,9 @@
                 <app-recent-patients></app-recent-patients>
             </div>
         </div>
+        <div class="col col-md-12">
+            <app-location-analytics></app-location-analytics>
+        </div>
 
     </div>
 </div>
