WilayaAnalytics and Commune Analytics init

--- a/src/app/components/dashboard/content/analytics/location-analytics/location-analytics.component.html
+++ b/src/app/components/dashboard/content/analytics/location-analytics/location-analytics.component.html
@@ -1,1 +1,11 @@
-<p>location-analytics works!</p>
+<div class="row">
+    <div class="col col-md-4">
+        <div class="card primary-radius">
+            <app-wilaya-analytics></app-wilaya-analytics>
+        </div>
+    </div>
+    <div class="col col-md-8">
+        <app-commune-analytics></app-commune-analytics>
+
+    </div>
+</div>
