--- a/src/app/components/dashboard/content/analytics/location-analytics/wilaya-analytics/wilaya-analytics.component.html
+++ b/src/app/components/dashboard/content/analytics/location-analytics/wilaya-analytics/wilaya-analytics.component.html
@@ -1,1 +1,7 @@
-<p>wilaya-analytics works!</p>
+<div class="main-container">
+    <h5>Statistqiue par Wilaya</h5>
+    <div class="canvas-container">
+        <canvas baseChart [legend]="false" height="280px" [datasets]="radarChartData" [options]="radarChartOptions" [labels]="radarChartLabels" [chartType]="radarChartType">
+        </canvas>
+    </div>
+</div>
