Diagnosis Analytics init

--- a/src/app/components/dashboard/content/general/general.component.html
+++ b/src/app/components/dashboard/content/general/general.component.html
@@ -25,4 +25,9 @@
             <app-general-subscription></app-general-subscription>
         </div>
     </div>
+    <div class="row analytics-diagnosis">
+        <div class="col col-md-12">
+            <app-diagnosis-analytics></app-diagnosis-analytics>
+        </div>
+    </div>
 </div>
