--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-controller/appointments-controller.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-controller/appointments-controller.component.html
@@ -3,6 +3,9 @@
         <i class="fa fa-plus"></i>
         Nouvelle visit 
     </button>
+    <a *ngIf="appointments.length > 0">
+        <i class="fa fa-calendar-alt"></i> {{appointments.length}} RDV pour aujourd'hui
+    </a>
     <button class="secondary-button right" (click)="next()" [disabled]="waitingRoom == null"> 
         Patient Suivant <i class="fa fa-arrow-right"></i>
     </button>
