--- a/src/app/components/dashboard/content/waiting-room/appointments-loader/appointments-loader.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-loader/appointments-loader.component.html
@@ -1,1 +1,10 @@
-<p>appointments-loader works!</p>
+<div class="main-container">
+    <div class="content primary-radius">
+        <h5>Les Rendez-Vous de aujourd'hui</h5>
+        <div class="appointments-list">
+            <div class="appointment" *ngFor="let appointment of appointments">
+                <app-appointment [appointment]="appointment"></app-appointment>
+            </div>
+        </div>
+    </div>
+</div>
