--- a/src/app/components/dashboard/content/waiting-room/appointments-loader/appointments-loader.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-loader/appointments-loader.component.html
@@ -3,7 +3,7 @@
         <h5>Les Rendez-Vous de aujourd'hui</h5>
         <div class="appointments-list">
             <div class="appointment" *ngFor="let appointment of appointments">
-                <app-appointment [appointment]="appointment"></app-appointment>
+                <app-appointment (loadAppointmentEvent)="loadAppointment($event)" [appointment]="appointment"></app-appointment>
             </div>
         </div>
     </div>
