WaitingRoom Report update done

--- a/src/app/components/dashboard/content/waiting-room/calendar/calendar.component.html
+++ b/src/app/components/dashboard/content/waiting-room/calendar/calendar.component.html
@@ -22,5 +22,5 @@
             </tr>
         </table>
     </div>
-    <app-waiting-room-report *ngIf="currentDate" [currentDate]="currentDate"></app-waiting-room-report>
+    <app-waiting-room-report [updateSubject]="updateSubject" *ngIf="currentDate" [currentDate]="currentDate"></app-waiting-room-report>
 </div>
