--- a/src/app/components/dashboard/content/waiting-room/waiting-room.component.html
+++ b/src/app/components/dashboard/content/waiting-room/waiting-room.component.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="col col-md-4">
-            <app-calendar></app-calendar>
+            <app-calendar (dateChangedEvent)="dateChanged($event)"></app-calendar>
         </div>
     </div>
 
