--- a/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visits-list/visit-row/visit-row.component.html
+++ b/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visits-list/visit-row/visit-row.component.html
@@ -1,4 +1,4 @@
-<div class="visit-container">
+<div class="visit-container" (click)="openDetails()">
     <div class="stretch-container">
         <span>{{visit.medicalFile.name}}</span>
         <span>{{visit.medicalFile.lastname}}</span>
