--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -30,5 +30,6 @@
             </div>
         </div>
         <app-appointments-loader *ngIf="windowPage == 'appointments-loader'" (closeEvent)="close()"></app-appointments-loader>
+        <app-visit-details *ngIf="windowPage == 'visit-details'"></app-visit-details>
     </div>
 </div>
