--- a/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visit-details/visit-details.component.html
+++ b/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visit-details/visit-details.component.html
@@ -1,1 +1,132 @@
-<p>visit-details works!</p>
+<div class="main-container">
+    <div class="content primary-radius">
+        <div class="stretch-container">
+            <div class="info-side">
+                <div class="mini-profil stretch-container">
+                    <div class="name-icon-container">
+                        <div class="icon-container">
+                            <span>{{visit.medicalFile.name[0]}}</span>
+                        </div>
+                    </div>
+                    <div class="patient-info">
+                        <div class="center-v">
+                            <div>
+                                <h5>{{visit.medicalFile.name}} {{visit.medicalFile.lastname}}</h5>
+                                <p>
+                                    <i class="fa fa-calendar"></i> {{visit.medicalFile.birthday}}
+                                    <span></span>
+                                </p>
+                                <p>
+                                    <i class="fa fa-envelope"></i> {{(visit.medicalFile.email) ? (visit.medicalFile.email) : ("Inconnue")}}
+                                </p>
+                                <p>
+                                    <i class="fa fa-phone"></i> {{(visit.medicalFile.phone) ? (visit.medicalFile.phone) : ("Inconnue")}}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col col-md-6" *ngIf="visit.medicalFile.address">
+                        <div class="address">
+                            <label>Address</label>
+                            <p>
+                                <i class="fa fa-map-marked-alt"></i>
+                                <span *ngIf="visit.medicalFile.address && visit.medicalFile.address.address">
+                                    {{ visit.medicalFile.address.address }}
+                                </span>
+                                <span *ngIf="visit.medicalFile.address.commune">
+                                    {{visit.medicalFile.address.commune.name}} {{visit.medicalFile.address.commune.wilaya.name}} 
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col col-md-6" *ngIf="visit.medicalFile.profession">
+                        <div class="profession">
+                            <label>La Prefession</label>
+                            <p>{{visit.medicalFile.profession.name}}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="vital-setting">
+                    <app-visit-vital-setting [editable]="false" [vitalSetting]="visit.vitalSetting" [active]="true"></app-visit-vital-setting>
+                </div>
+                <div class="symptoms">
+                    <label>Motif de consultation et symptoms</label>
+                    <div class="symptoms-container">
+                        <span *ngFor="let symptom of visit.symptoms">{{symptom.name}}</span>
+
+                        <p class="no-data-message" *ngIf="visit.symptoms.length == 0">Aucun Symptoms ou motife de consultation </p>
+                    </div>
+                </div>
+                <div class="condition" *ngIf="visit.condition">
+                    <label>Pathologie</label>
+                    <p>{{visit.condition.name}}</p>
+                </div>
+            </div>
+            <div class="info-side">
+                <div class="waiting-room">
+                    <label>Salle d'attent</label>
+                    <p class="waiting-room-info">
+                        <span><i class="fa fa-calendar"></i>{{visit.waitingRoom.date}}</span>
+                        <span><i class="fa fa-sort-amount-up"></i>{{visit.order}} {{(visit.order == 1) ? ("er") : ("éme")}}</span>
+                    </p>
+                    <p>
+                        <i class="fa fa-clock"></i> Temps d'arrivé <span>{{visit.arrivalTime}}</span>
+                    </p>
+                    <p *ngIf="visit.status == 'in visit'">
+                        visite a commencé à <span>{{visit.startTime}}</span>
+                    </p>
+                    <p *ngIf="visit.status == 'visit done' || visit.status == 'visit payed'">
+                        visite a commencé à <span>{{visit.startTime}}</span> visite a terminé à <span>{{visit.endTime}}</span>
+                    </p>
+                </div>
+                <div class="medical-acts">
+                    <label>L'Actes Medicaaux</label>
+                    <div class="medical-acts-list">
+                        <p *ngFor="let medicalAct of visit.medicalActs">
+                            {{medicalAct.name}}
+                            <span>{{medicalAct.price}} DA</span>
+                        </p>
+                    </div>
+                    <div class="row">
+                        <div class="col col-md-4">
+                            <label>Montant Total</label>
+                            <p>{{totalPrice}} DA</p>
+                        </div>
+                        <div class="col col-md-4" *ngIf="visit.status == 'visit payed'">
+                            <label>Montant Payé</label>
+                            <p>{{visit.payedMoney}} DA</p>
+                        </div>
+                        <div class="col col-md-4" *ngIf="visit.status == 'visit payed' && visit.debt">
+                            <label>Credit</label>
+                            <p>{{visit.debt}} DA</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="clinical-exam">
+                    <label>Examen Clinique</label>
+                    <p *ngIf="visit.clinicalExam">
+                        {{visit.clinicalExam}}
+                    </p>
+                    <p *ngIf="!visit.clinicalExam">
+                        Aucun examen clinique
+                    </p>
+                </div>
+                <div class="appointment" *ngIf="visit.appointment">
+                    <label>Prochain Rendez-vous</label>
+                    <p>le {{visit.appointment.date}}
+                        <span *ngIf="visit.appointment.time">
+                            {{visit.appointment.time}}
+                        </span>
+                    </p>
+                </div>
+                <div class="more-details">
+                    <a>plus de details documents , prescriptions , diagnostique ...</a>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
