Visit More Details init

--- a/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visit-details/visit-details.component.html
+++ b/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visit-details/visit-details.component.html
@@ -1,5 +1,6 @@
 <div class="main-container">
     <div class="content primary-radius">
+        <app-visit-more-details></app-visit-more-details>
         <div class="stretch-container">
             <div class="info-side">
                 <div class="mini-profil stretch-container">
@@ -125,8 +126,6 @@
                     <a>plus de details documents , prescriptions , diagnostique ...</a>
                 </div>
             </div>
-
         </div>
-
     </div>
 </div>
