--- a/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visit-details/visit-more-details/visit-more-details.component.css
+++ b/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visit-details/visit-more-details/visit-more-details.component.css
@@ -12,6 +12,10 @@
     margin-bottom: 8px;
 }
 
+.menu-options {
+    padding: 0px 8px;
+}
+
 .option {
     display: inline-flex;
     align-items: stretch;
